<resources>
    <string name="app_name">TransportPassenger</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_run_button">Start a new run</string>
    <string name="initial_position">-1, -1</string>
    <string name="car_start">Car starts at :\t </string>
    <string name="passenger_pick_up">Passenger pick up :\t </string>
    <string name="passenger_drop">Passenger drop :\t\t </string>
    <string name="passenger_pick_up_notification">Passenger has been picked up!</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="path_to_passenger">Path to passenger</string>
    <string name="path_to_destination">Path to destination</string>
    <string name="try_again">Try Again</string>
</resources>
